syntax = "proto3";

package syntoks_feed;
option go_package = "./proto";

import "validate/validate.proto";
import "api/models.proto";
import "google/protobuf/any.proto";

message CreateFeedRequest {
    string user_id = 1;
    google.protobuf.Any extra_data = 2;
}

message CreateFeedResponse {
    Feed feed = 1;
}

message AddActivityRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
    string foreign_object_id = 2 [(validate.rules).string.min_len = 1];
    int64 time = 3;
    string user_id = 4;
    string activity_type = 5;
    repeated string redirect_to = 6;
    google.protobuf.Any extra_data = 7;
}

message AddActivityResponse {
    Activity activity = 1;
}

message UpdateActivityRequest {
    string activity_id = 1 [(validate.rules).string.min_len = 1];
    google.protobuf.Any extra_data = 2;
}

message UpdateActivityResponse {
    Activity activity = 1;
}

message UpdateFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
    google.protobuf.Any extra_data = 2;
}

message UpdateFeedResponse {
    Feed feed = 1;
}

message DeleteActivityRequest {
    string activity_id = 1 [(validate.rules).string.min_len = 1];
}

message DeleteActivityResponse {
}

message DeleteFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
}

message DeleteFeedResponse {
}

message GetActivityRequest {
    string activity_id = 1 [(validate.rules).string.min_len = 1];
}

message GetActivityResponse {
    Activity activity = 1;
}

message GetFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
}

message GetFeedResponse {
    Feed feed = 1;
}

message CreateSortedFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
    string key_formula = 2 [(validate.rules).string.min_len = 1];
}

message CreateSortedFeedResponse {
    SortedFeed sorted_feed = 1;
}

message GetFeedActivitiesRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
    int64 limit = 2;
    string offset_id = 3;
}

message GetFeedActivitiesResponse {
    repeated Activity activities = 1;
}

message GetActivityByObjectIDRequest {
    string foreign_object_id = 1 [(validate.rules).string.min_len = 1];
}

message GetActivityByObjectIDResponse {
    Activity activity = 1;
}

message UpdateSortedFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
    google.protobuf.Any extra_data = 2;
}

message UpdateSortedFeedResponse {
    SortedFeed sorted_feed = 1;
}


message DeleteSortedFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
}

message DeleteSortedFeedResponse {
}


message GetSortedFeedRequest {
    string feed_id = 1 [(validate.rules).string.min_len = 1];
}

message GetSortedFeedResponse {
    SortedFeed sorted_feed = 1;
}


message GetSortedFeedActivitiesRequest {
    SortedFeed sorted_feed = 1;
    int64 limit = 2;
    string offset_id = 3;
    bool reverse = 4;
}

message GetSortedFeedActivitiesResponse {
    repeated Activity activities = 1;
}

service FeedsService {
    rpc AddActivity(AddActivityRequest) returns (AddActivityResponse) {}
    rpc GetActivity(GetActivityRequest) returns (GetActivityResponse) {}
    rpc GetActivityByObjectID(GetActivityByObjectIDRequest) returns (GetActivityByObjectIDResponse) {}
    rpc UpdateActivity(UpdateActivityRequest) returns (UpdateActivityResponse) {}
    rpc DeleteActivity(DeleteActivityRequest) returns (DeleteActivityResponse) {}
    rpc CreateFeed(CreateFeedRequest) returns (CreateFeedResponse) {}
    rpc GetFeed(GetFeedRequest) returns (GetFeedResponse) {}
    rpc GetFeedActivities(GetFeedActivitiesRequest) returns (GetFeedActivitiesResponse) {}
    rpc UpdateFeed(UpdateFeedRequest) returns (UpdateFeedResponse) {}
    rpc DeleteFeed(DeleteFeedRequest) returns (DeleteFeedResponse) {}
    rpc CreateSortedFeed(CreateSortedFeedRequest) returns (CreateSortedFeedResponse) {}
    rpc GetSortedFeed(GetSortedFeedRequest) returns (GetSortedFeedResponse) {}
    rpc GetSortedFeedActivities(GetSortedFeedActivitiesRequest) returns (GetSortedFeedActivitiesResponse) {}
    rpc UpdateSortedFeed(UpdateSortedFeedRequest) returns (UpdateSortedFeedResponse) {}
    rpc DeleteSortedFeed(DeleteSortedFeedRequest) returns (DeleteSortedFeedResponse) {}
}